--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -20,7 +20,7 @@ jobs:
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+          password: ${{ secrets.DOCKERHUB_PASSWORD }}
 
       - name: Build Docker image
         run: |
@@ -30,5 +30,4 @@ jobs:
         run: |
           docker run -d -p 8080:80 my-nginx-app
 
-      - name: Logout from Docker Hub
-        run: docker logout
+    
