--- a/.github/workflows/Dockerfile
+++ b/.github/workflows/Dockerfile
@@ -1,15 +1,8 @@
 # Use the official NGINX image from the Docker Hub
 FROM nginx:latest
 
-# Copy your custom NGINX configuration file to the container
-#COPY nginx.conf /etc/nginx/nginx.conf
+# Copy the index.html file to the default NGINX web directory
+COPY index.html /usr/share/nginx/html/
 
-# Copy your static website files to the container
-COPY . /usr/share/nginx/html
-
-# Expose port 80 to the outside world
+# Expose port 80
 EXPOSE 80
-
-# Start NGINX when the container launches
-CMD ["nginx", "-g", "daemon off;"]
-
