--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -32,7 +32,10 @@ jobs:
 
       - name: Run Docker container
         run: |
-          docker run -d -p 8080:80 ${{ secrets.DOCKERHUB_USERNAME }}/my-app:latest
+          docker run -d -p 80:80 ${{ secrets.DOCKERHUB_USERNAME }}/my-app:latest
 
-      - name: Logout from Docker Hub
-        run: docker logout
+      - name: DisplayngrokURL
+        run: |
+          sudo apt install curl -y
+          curl-s http://127.0.0.1
+ 
