--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -37,5 +37,5 @@ jobs:
       - name: DisplayngrokURL
         run: |
           sudo apt install curl -y
-          curl-s http://127.0.0.1
+          sudo curl-s http://127.0.0.1
  
