--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -34,5 +34,7 @@ jobs:
         run: |
           docker run -d -p 80:80 ${{ secrets.DOCKERHUB_USERNAME }}/my-app:latest
 
-    
+      - name: Test Docker container 
+        run: | 
+          curl http://localhost:8080
  
